--- a/AttributeGrammar/AttributeGrammar/AttributeGrammar.csproj
+++ b/AttributeGrammar/AttributeGrammar/AttributeGrammar.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Pidgin" Version="3.1.0" />
+    <PackageReference Include="Sawmill" Version="3.3.0" />
   </ItemGroup>
 
   <ItemGroup>
